--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
-spring.datasource.username=thanhnd
-spring.datasource.password=123456
-spring.sql.init.mode=always
+spring.ldap.embedded.ldif=classpath:server.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.port=33389
